<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_medium_gray"
    tools:context=".ui.albums.AlbumsFragment">

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/shimmer_albums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:shimmer_recycler_item_count="6"
        app:shimmer_recycler_layout="@layout/placeholder_row_layout_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.todkars.shimmer.ShimmerRecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>