...
            name="artist"
            type="com.alexandra.musicapp.domain.models.Artist" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row_layout_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
...
